<resources>
    <string name="app_name">DS</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_pagging">An error occurred</string>
    <string name="pagging_retry">Retry</string>
    <string name="content_desc_photo_on_detail">Photo of the place</string>
    <string name="button_favourite">Favorite Button</string>

    <string name="title_episode">Mystery in the Shadows</string>
    <string name="episode_number">Episode 1</string>
    <string name="watch_now">Watch now</string>

    //OverviewFragment
    <string name="anime_title">Title of the Anime</string>
    <string name="anime_alt_title">Alt title of the Anime</string>
    <string name="placeholder_value_rating1">4.3</string>
    <string name="placeholder_value_rating2">/5.0</string>
    <string name="content_desc_icon_rating">Icon Rating</string>
    <string name="placeholder_value_chapters">Movie (1 ep)</string>
    <string name="placeholder_value_studio">Sunrise</string>
    <string name="placeholder_value_year">2022</string>
    <string name="placeholder_value_synopsis">Synopsis :</string>
    <string name="tmp_description">Description from anime</string>
    <string name="tv_account">Account</string>
    <string name="icon_edit_account">Edit Profile</string>
    <string name="item_profile_1">Edit Profile</string>
    <string name="desc_profile_1">Edit your profile info</string>
    <string name="tv_preferences">Preferences</string>
    <string name="icon_logout">Logout</string>
    <string name="item_logout">Logout</string>
    <string name="desc_logout">Logout from your account</string>
    <string name="headline_on_login">Welcome to DeStream</string>
    <string name="caption_on_login">Stay signed to your account to create watching list</string>
    <string name="image_on_loginactivity">Image on LoginActivity</string>

    //login
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="suggestion2register">Don’t Have an Account?</string>
    <string name="register_now">Register Now!</string>
    <string name="register">Register</string>
    <string name="registerCaption">Create your account and start your journey with us</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="submit">Submit</string>

    <string name="fav_img_bg_desc">Background image</string>
    <string name="fragment_favorite_title">Favorites</string>
    <string name="add_to_favorites">Add favorite</string>
    <string name="toolbar_logo_desc">Logo</string>
    <string name="toolbar_search_desc">Search</string>
    <string name="toolbar_theme_desc">Theme</string>
    <string name="toolbar_inbox_desc">Downloads</string>
    <string name="banner_carousel_desc">Banner Image</string>
    <string name="tv_item_category">Adventure</string>
    <string name="home_tv_trending">Trending</string>
    <string name="home_tv_new_release">New Release</string>
    <string name="item_anime_home_iv_desc">Image view item anime home</string>
    <string name="home_tv_recommended">Recommended</string>
    <string name="detail_blurred_anime_photo_desc">blurred anime photo</string>
    <string name="banner_btn_watch">Watch</string>
    <string name="banner_btn_anime_detail">Anime Detail</string>
    <string name="anime_list_toolbar_title">Trending</string>
    <string name="detail_button_watch_now">Watch Now</string>

    //Register
    <string name="button_back">Button Back</string>
    <string name="title_on_register">Create Account</string>
    <string name="content_desc_abstract">Abstrak 2</string>
    <string name="email_empty">Email Must Be Filled</string>
    <string name="password_empty">Password Must Be Filled</string>
    <string name="password_confirmation_empty">Password Confirmation Must Be Filled</string>
    <string name="email_n_password_empty">Email and Password Must Be Filled</string>
    <string name="validation_error">All Field Must Be Filled</string>
    <string name="full_name_empty">Full Name Must Be Filled</string>
    <string name="email_invalid">Format Email is Invalid</string>
    <string name="password_minimum_character">Password Must Be at Least 8 Characters</string>
    <string name="password_not_match">Password entered is not the same</string>
    <string name="account_already_registered">Your account is created and ready to use. Login and see what other people is up to!</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="username_already_registered">Username already in use</string>
    <string name="username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="item_anime_tv_eps">24</string>
</resources>