<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logged_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginVertical="40dp"
            android:src="@drawable/ic_placeholder_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_section_account_settings"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/fo_nunito_sans_extra_bold"
            android:text="@string/tv_account"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginHorizontal="32dp"
            android:outlineAmbientShadowColor="@color/shadowColor"
            android:outlineSpotShadowColor="@color/shadowColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_section_account_settings"
            tools:targetApi="p">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_item_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/icon_edit_account"
                    android:src="@drawable/ic_edit_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView">

                    <TextView
                        android:id="@+id/tv_edit_profile"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/fo_nunito_sans_bold"
                        android:gravity="start"
                        android:maxEms="9"
                        android:maxLines="1"
                        android:text="@string/item_profile_1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_edit_profile_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/fo_nunito_sans_light"
                        android:text="@string/desc_profile_1"
                        android:textColor="@color/textColorCaption2" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_section_preferences_settings"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/fo_nunito_sans_extra_bold"
            android:text="@string/tv_preferences"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_editor_absoluteX="32dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginHorizontal="32dp"
            android:outlineAmbientShadowColor="@color/shadowColor"
            android:outlineSpotShadowColor="@color/shadowColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_section_preferences_settings"
            tools:targetApi="p">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_item_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/icon_logout"
                    android:src="@drawable/ic_logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_logout"
                    app:layout_constraintStart_toEndOf="@+id/iv_logout"
                    app:layout_constraintTop_toTopOf="@+id/iv_logout">

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/fo_nunito_sans_bold"
                        android:gravity="start"
                        android:maxEms="9"
                        android:maxLines="1"
                        android:text="@string/item_logout"
                        android:textColor="@color/red_soft"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_description_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/fo_nunito_sans_light"
                        android:text="@string/desc_logout"
                        android:textColor="@color/textColorCaption2" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>